--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 permissions:
   contents: write
-  
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -21,7 +21,25 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install dependencies
+      # --- Build & deploy your Functions ---
+      - name: Install functions deps
+        run: npm install
+        working-directory: ./functions
+
+      - name: Build functions
+        run: npm run build
+        working-directory: ./functions
+
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
+      - name: Deploy Cloud Functions
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        run: firebase deploy --only functions
+
+      # --- Build & deploy your Next.js app to GitHub Pages ---
+      - name: Install root deps
         run: npm install
 
       - name: Build project
