--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Deploy to Vercel via CLI
 
 on:
   push:
@@ -6,15 +6,15 @@ on:
       - main
 
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     env:
-      FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
-      FIREBASE_AUTH_DOMAIN: ${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
+      NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
+      NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
       NEXT_PUBLIC_FIREBASE_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECT_ID }}
       NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: ${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET }}
       NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
@@ -23,40 +23,30 @@ jobs:
       GOOGLE_APP_PASSWORD: ${{ secrets.NEXT_GOOGLE_APP_PASSWORD }}
 
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
 
-      # --- Build & deploy your Functions ---
-      - name: Install functions deps
-        run: npm install
+      # Build Firebase Functions
+      - name: Install Functions Dependencies
+        run: npm ci
         working-directory: ./functions
 
-      - name: Build functions
+      - name: Build Firebase Functions
         run: npm run build
         working-directory: ./functions
 
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
+      # Install Vercel CLI
+      - name: Install Vercel CLI
+        run: npm install -g vercel
 
-      - name: Deploy Cloud Functions
-        run: firebase deploy --only functions
+      # Deploy to Vercel using CLI
+      - name: Deploy to Vercel (Production)
+        run: vercel --prod --yes --token ${{ secrets.VERCEL_TOKEN }}
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-
-      # --- Build & deploy your Next.js app to GitHub Pages --- 
-      - name: Install root deps
-        run: npm install
-
-      - name: Build project
-        run: npm run build
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./out
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
